--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>UQCS Code Golf Website</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <div class="page">
     <h1>UQCS Code Golf Website</h1>
     {% block body %}{% endblock %}
