Fixed Footer slightly

--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -14,7 +14,7 @@
     <div id="container">
       <div id="header">
         <div id="project-name" class="float-left code">
-          UQ Computer Society - CodeGolf
+          UQCS - CodeGolf
         </div>
         <div id="account-btns" class="float-right">
           {% if account_name %}
@@ -33,27 +33,27 @@
     </div>
     <div id="footer">
       <div class="column small-4">
-        <ul class="no-bullet">
+        <ul class="no-bullet float-center" style="width: 100px;">
           <li class="footer-link-head">UQCS</li>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/join">Join</a></li>
+          <li><a href="/" class="light-link">Home</a></li>
+          <li><a href="/about" class="light-link">About</a></li>
+          <li><a href="/contact" class="light-link">Contact</a></li>
+          <li><a href="/join" class="light-link">Join</a></li>
         </ul>
       </div>
       <div class="column small-4">
-        <ul class="no-bullet">
+        <ul class="no-bullet float-center" style="width: 100px;">
           <li class="footer-link-head">CodeGolf</li>
-          <li><a href="/">CodeGolf</a></li>
-          <li><a href="/signup">Signup</a></li>
-          <li><a href="/challenges">challenges</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contribute">Contribute</a></li>
-          <li><a href="/docs">Documentation</a></li>
+          <li><a href="/" class="light-link">CodeGolf</a></li>
+          <li><a href="/signup" class="light-link">Signup</a></li>
+          <li><a href="/challenges" class="light-link">challenges</a></li>
+          <li><a href="/about" class="light-link">About</a></li>
+          <li><a href="/contribute" class="light-link">Contribute</a></li>
+          <li><a href="/docs" class="light-link">Documentation</a></li>
         </ul>
       </div>
       <div class="column small-4">
-        <ul class="no-bullet">
+        <ul class="no-bullet float-center" style="width: 125px;">
           <li>
             <a href="/" class="button social slack">
               <i class="fa fa-slack"></i> Slack
