--- a/codegolf/static/css/codegolf.css
+++ b/codegolf/static/css/codegolf.css
@@ -25,10 +25,20 @@ html, body {
     height: 200px;
     clear: both;
     background-color: #2b2b2b;
+    padding-top: 8px;
 }
 
 .footer-link-head {
-    color: #c8c8c8
+    color: #c8c8c8;
+    text-decoration: underline;
+}
+
+.light-link {
+    color: #e1faea;
+}
+
+.light-link:hover {
+    color: #fff;
 }
 
 
