--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -44,7 +44,7 @@
       <div class="column small-4">
         <ul class="no-bullet float-center" style="width: 100px;">
           <li class="footer-link-head">CodeGolf</li>
-          <li><a href="/" class="light-link">CodeGolf</a></li>
+          <li><a href="/" class="light-link">Home</a></li>
           <li><a href="/signup" class="light-link">Signup</a></li>
           <li><a href="/challenges" class="light-link">challenges</a></li>
           <li><a href="/about" class="light-link">About</a></li>
@@ -53,7 +53,7 @@
         </ul>
       </div>
       <div class="column small-4">
-        <ul class="no-bullet float-center" style="width: 125px;">
+        <ul class="no-bullet float-center" style="width: 125px; padding-top: 20px;">
           <li>
             <a href="/" class="button social slack">
               <i class="fa fa-slack"></i> Slack
