--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -7,6 +7,7 @@
     <title>{%  block title %} UQCS - CodeGolf {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codegolf.css') }}" />
+    {% block css %}{% endblock %}
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
@@ -14,7 +15,14 @@
     <div id="container">
       <div id="header">
         <div id="project-name" class="float-left code">
-          UQCS - CodeGolf
+          <a href="/">UQCS - CodeGolf</a>
+        </div>
+        <div id="large-menu" class="float-left show-for-medium code">
+          &nbsp;
+          / <a href="/">About</a>
+          / <a href="/">Challenges</a>
+          / <a href="/">Contrib</a>
+          / <a href="/">Scores</a>
         </div>
         <div id="account-btns" class="float-right">
           {% if account_name %}
@@ -46,10 +54,9 @@
           <li class="footer-link-head">CodeGolf</li>
           <li><a href="/" class="light-link">Home</a></li>
           <li><a href="/signup" class="light-link">Signup</a></li>
-          <li><a href="/challenges" class="light-link">challenges</a></li>
           <li><a href="/about" class="light-link">About</a></li>
+          <li><a href="/challenges" class="light-link">Challenges</a></li>
           <li><a href="/contribute" class="light-link">Contribute</a></li>
-          <li><a href="/docs" class="light-link">Documentation</a></li>
         </ul>
       </div>
       <div class="column small-4">
@@ -86,5 +93,6 @@
     <script src="{{ url_for('static', filename='js/vendor/what-input.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/codegolf.js') }}"></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
