--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -3,16 +3,41 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codegolf.css') }}" />
 {% endblock %}
 {% block body %}
-  <div id="info" class="column small-12">
-    something here with a logo
+  <div id="info" class="column small-12 text-center">
+    <img src="http://uqcs.org.au/img/logo.png" alt="UQCS logo">
+    <h3>UQCS - Code Golf</h3>
   </div>
-  <div id="challenge" class="column small-12">
-    This Weeks Challenge
+
+  <div id="challenge-wrap" class="column small-12">
+    <div id="challenge" class="column small-10 small-offset-1 large-8 large-offset-2">
+      <p>This is where a challenge will be displayed for the 2 weeks. This will
+      be a rendering of markdown to allow people to do fancy stuff like lists.</p>
+
+      <h2>Blah Example</h2>
+      <h4>Explanation</h4>
+      <p>
+        stuff stuff stuff stuff
+      </p>
+      <h4>The Problem</h4>
+      <p>
+        Something something something
+      </p>
+      <h4>Scoring</h4>
+      <p>
+        things and stuff
+      </p>
+    </div>
+  </div>
+  <div id="getting-started" class="column small-12">
+    stuff about signing up to do things and stuff. Also says how to upload submissions
+    and some stuff about submitting problems
   </div>
   <div id="leader-board" class="column small-12">
     Leader Board
   </div>
-  <div id="getting-started" class="column small-12">
-    Getting Started
+  <div id="contribute" class="column small-12 text-center">
+    This project is brought to you by the Univeristy of Queensland Computer Society,
+    if you would like to help maintain this project visit <a href="/contirbute">here</a>.
   </div>
+
 {% endblock %}
