created some default template files for url resolution.

--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -1,6 +1,5 @@
 {% extends 'layout.html' %}
 {% block css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/codegolf.css') }}" />
 {% endblock %}
 {% block body %}
   <div id="info" class="column small-12 text-center">
@@ -37,7 +36,7 @@
   </div>
   <div id="contribute" class="column small-12 text-center">
     This project is brought to you by the Univeristy of Queensland Computer Society,
-    if you would like to help maintain this project visit <a href="/contirbute">here</a>.
+    if you would like to help maintain this project visit <a href="/contribute">here</a>.
   </div>
 
 {% endblock %}
