--- a/codegolf/templates/user/login.html
+++ b/codegolf/templates/user/login.html
@@ -3,5 +3,5 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user/login.css') }}" />
 {% endblock %}
 {% block body %}
-
+  <!-- todo(wbo): uq signin and google auth login. -->
 {% endblock %}
