--- a/codegolf/static/css/codegolf.css
+++ b/codegolf/static/css/codegolf.css
@@ -40,6 +40,11 @@ body, h1, h2, h3, h4, h5, h6 {
 #large-menu a:hover {
     color: #20252b;
 }
+
+#large-menu .active {
+    color: black;
+}
+
 #account-btns {
     height: 40px;
 }
