--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{%  block title %} UQCS - CodeGolf {% endblock %}</title>
+    <title>{%  block title %} {⛳} UQCS - CodeGolf {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codegolf.css') }}" />
     {% block css %}{% endblock %}
