Fix Google+ link

--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li>
-            <a href="https://google.com/profiles/uqcomputing" class="button social google">
+            <a href="https://plus.google.com/116973751891375621428" class="button social google">
               <i class="fa fa-google-plus"></i> Google+
             </a>
           </li>
