--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -4,7 +4,7 @@
 {% block body %}
   <div id="info" class="column small-12 text-center">
     <img src="http://uqcs.org.au/img/logo.png" alt="UQCS logo">
-    <h3>UQCS - Code Golf</h3>
+    <h3>UQCS {⛳} Code Golf</h3>
   </div>
 
   <div id="challenge-wrap" class="column small-12">
