--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -15,7 +15,7 @@
     <div id="container">
       <div id="header">
         <div id="project-name" class="float-left code">
-          <a href="{{ url_for('index') }}">UQCS - CodeGolf</a>
+          <a href="{{ url_for('index') }}"> {⛳} UQCS - CodeGolf</a>
           /
         </div>
         <div id="large-menu" class="float-left show-for-medium code">
