Prevent text from filling the entire line
This is good on wide monitors

--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -8,7 +8,7 @@
   </div>
 
   <div id="challenge-wrap" class="column small-12">
-    <div id="challenge" class="column small-10 small-offset-1 large-8 large-offset-2">
+    <div id="challenge" class="column small-centered small-10 large-8">
       <p>This is where a challenge will be displayed for the 2 weeks. This will
       be a rendering of markdown to allow people to do fancy stuff like lists.</p>
 
@@ -28,11 +28,15 @@
     </div>
   </div>
   <div id="getting-started" class="column small-12">
-    stuff about signing up to do things and stuff. Also says how to upload submissions
-    and some stuff about submitting problems
+    <div class="column small-centered small-10 large-8">
+      stuff about signing up to do things and stuff. Also says how to upload submissions
+      and some stuff about submitting problems
+    </div>
   </div>
   <div id="leader-board" class="column small-12">
-    Leader Board
+    <div class="column small-centered small-10 large-8">
+      Leader Board
+    </div>
   </div>
   <div id="contribute" class="column small-12 text-center">
     This project is brought to you by the Univeristy of Queensland Computer Society,
