--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -39,8 +39,8 @@
     </div>
   </div>
   <div id="contribute" class="column small-12 text-center">
-    This project is brought to you by the Univeristy of Queensland Computer Society,
-    if you would like to help maintain this project visit <a href="/contribute">here</a>.
+    This project is brought to you by the University of Queensland Computer Society &mdash;
+    <a href="/contribute">help maintain</a> this project
   </div>
 
 {% endblock %}
