--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -23,7 +23,7 @@
           <a {%if request.endpoint == "index"%} class="active" {%endif%} href="{{ url_for('index') }}">Home</a>
           | <a {%if request.endpoint == "about"%} class="active" {%endif%} href="{{ url_for('about') }}">About</a>
           | <a {%if request.endpoint == "challenge.index"%} class="active" {%endif%} href="{{ url_for('challenge.index') }}">Challenges</a>
-          | <a {%if request.endpoint == "contribute"%} class="active" {%endif%} href="{{ url_for('contribute') }}">Contrib</a>
+          | <a {%if request.endpoint == "contribute"%} class="active" {%endif%} href="{{ url_for('contribute') }}">Contribute</a>
           | <a {%if request.endpoint == "scores"%} class="active" {%endif%} href="{{ url_for('scores') }}">Scores</a>
         </div>
         <div id="account-btns" class="float-right">
