Add content to 'about' section

--- a/codegolf/templates/about.html
+++ b/codegolf/templates/about.html
@@ -2,5 +2,43 @@
 {% block css %}
 {% endblock %}
 {% block body %}
+  <div  class="column small-12">
+    <div class="column small-centered small-10 large-8 text-center">
+      <h2>UQCS {⛳} CodeGolf</h2>
+    </div>
+  </div>
 
+  <div class="column small-12">
+    <div class="column small-centered small-10 large-6">
+      <h4>What is code-golf?</h4>
+      <p>
+        Code-golf is the art of making computer programmes as small as possible.
+        Its name echoes the game of golf in which the aim is to win with as few strokes as possible.
+        In code-golf, the winner is the person whose program fulfills the requirements with the least bytes of source code.
+      </p>
+
+      <h4>How does the competition work?</h4>
+      <p>
+        Every 2 weeks we'll give you a challenge
+        &mdash; typically consisting of a set of inputs and the rules to transform them into desired outputs
+        (don't worry, we won't make you do GUIs).
+        Then you'll have 2 weeks to come up with a solution in the language of your choice, and to make it as small as possible.
+        You can submit as many times as you, so feel free to experiment.
+        At the end, we'll check that your solution works, and count the number of bytes it takes.
+        We'll then update the overall scoreboard, and the scoreboard for each language.
+      </p>
+
+      <h4>What're the rules?</h4>
+      <ul>
+        <li>Your submission must be your original work</li>
+        <li>Your submission must pass the provided tests to be considered</li>
+        <li>The judges' word is final</li>
+      </ul>
+
+      <h4>What can I win?</h4>
+      <p>
+        Undying fame
+      </p>
+    </div>
+  </div>
 {% endblock %}
