Minor css change

--- a/codegolf/static/css/codegolf.css
+++ b/codegolf/static/css/codegolf.css
@@ -42,7 +42,7 @@ body, h1, h2, h3, h4, h5, h6 {
 }
 
 #large-menu .active {
-    color: black;
+    color: #0a0a0a;
 }
 
 #account-btns {
@@ -139,7 +139,7 @@ body, h1, h2, h3, h4, h5, h6 {
 
 #challenge {
     background-color: #fefefe;
-    border: solid black 2px;
+    border: solid #0a0a0a 2px;
 }
 
 #leader-board {
