--- a/codegolf/templates/home.html
+++ b/codegolf/templates/home.html
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block body %}
   <div id="info" class="column small-12 text-center">
-    <img src="http://uqcs.org.au/img/logo.png" alt="UQCS logo">
+    <img src="https://uqcs.org.au/img/logo.png" alt="UQCS logo">
     <h3>UQCS {⛳} Code Golf</h3>
   </div>
 
