--- a/codegolf/templates/contribute.html
+++ b/codegolf/templates/contribute.html
@@ -2,22 +2,24 @@
 {% block css %}
 {% endblock %}
 {% block body %}
-  <div  class="column small-12">
+  <br>
+  <div  class="row">
     <div class="column small-centered small-10 large-8 text-center">
       <h2>
         Help maintain CodeGolf
       </h2>
     </div>
   </div>
-  <div class="column small-12">
-    <div class="column small-offset-1 small-5 large-offset-2 large-4">
-      <a class="button big-social github" href="https://github.com/UQComputingSociety/"><h3><i class="fa fa-github"></i> Github</h3></a>
+  <br>
+  <div class="row">
+    <div class="column small-6">
+      <a class="button big-social github title-button" href="https://github.com/UQComputingSociety/"><h3><i class="fa fa-github"></i> Github</h3></a>
       <p>
         Our code is hosted on Github and we accept pull requests. It is written in Python using Flask, and is MIT licensed.
       </p>
     </div>
-    <div class="column small-5 large-4 end">
-      <a class="button big-social slack" href="https://slack.uqcs.org.au/"><h3><i class="fa fa-slack"></i> Slack</h3></a>
+    <div class="column small-6 end">
+      <a class="button big-social slack title-button" href="https://slack.uqcs.org.au/"><h3><i class="fa fa-slack"></i> Slack</h3></a>
       <p>
         UQCS has a slack organisation where we discuss projects like CodeGolf.
         If you have an idea for improving CodeGolf, want help getting starting, or just want to hang out, feel free to join.
