--- a/codegolf/templates/layout.html
+++ b/codegolf/templates/layout.html
@@ -7,6 +7,7 @@
     <title>{%  block title %} {⛳} UQCS - CodeGolf {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/codegolf.css') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block css %}{% endblock %}
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
